[package]
name = "nas_pic_bed"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "fs"] }
futures = "0.3.31"
reqwest = { version = "0.12", features = [
    "default",
    "deflate",
    "gzip",
    "brotli",
    "json",
    "stream",
] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
